Gradient_descent linearEquatin_prediction

--- a/Multivarite_L_Regression.ipynb
+++ b/Multivarite_L_Regression.ipynb
@@ -2533,13 +2533,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "id": "c48db2aa-77d8-4edc-849e-98f6e7a8a4c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "#converting into csv file\n",
-    "final_csv"
+    "final_csv.to_csv('Teacher_salary.csv',index=False)"
    ]
   },
   {
